--- a/package.json
+++ b/package.json
@@ -5,5 +5,16 @@
   "repository": "git@github.com:philopian/express-ts.git",
   "author": "Phil Willis <philopian@gmail.com>",
   "license": "MIT",
-  "packageManager": "yarn@3.5.0"
+  "packageManager": "yarn@3.5.0",
+  "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.7"
+  },
+  "scripts": {
+    "lint": "prettier --config .prettierrc src/*.{ts} src/**/*.{ts} --write"
+  }
 }
